KSENROLL-13292: UI Issue Manage Exam Offering - Action Icons Spacing
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@75567 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -2208,7 +2208,7 @@ padding-left: 0px !important;
 //UI Issue Manage Exam Offering - Column Width
 
 .uif-activity-offering-item-status{
-  width: 12%;
+  width: 10%;
 }
 
 .uif-activity-offering-item-ac {
@@ -2216,7 +2216,7 @@ padding-left: 0px !important;
 }
 
 .uif-activity-offering-item-feac {
-  width: 16%;
+  width: 14%;
 }
 
 .uif-activity-offering-item-om {
@@ -2224,15 +2224,15 @@ padding-left: 0px !important;
 }
 
 .uif-activity-offering-item-day {
-  width: 15%;
+  width: 13%;
 }
 
 .uif-activity-offering-item-st {
-  width: 7%;
+  width: 6%;
 }
 
 .uif-activity-offering-item-et {
-  width: 7%;
+  width: 6%;
 }
 
 .uif-activity-offering-item-facility {
@@ -2240,16 +2240,20 @@ padding-left: 0px !important;
 }
 
 .uif-activity-offering-item-room {
-  width: 9%;
+  width: 8%;
 }
 
 .uif-activity-offering-item-icon {
-  width: 3%;
+  width: 7%;
 }
 
-.uif-activity-offering-item-icon {
-  width: 3%;
+
+.uif-activity-offering-item-icon > a {
+  margin: 5px;
+  margin-right: 0 !important;
+  margin-left: 0 !important;
 }
+
 
 
 .uif-ks-toggleable-footer-space{
